Converters Registro Pedido

--- a/web/app/administrador/pedidos/listar.xhtml
+++ b/web/app/administrador/pedidos/listar.xhtml
@@ -27,8 +27,8 @@ and open the template in the editor.
                         <li class="active">Ver Pedidos</li>
                     </ol>
                 </section>
-                <b:message for="listar-usuarios" showSummary="true" show-detail="true"/>
-                <h:form id="listar-usuarios" prependId="false">
+                <b:message for="listar-pedidos" showSummary="true" show-detail="true"/>
+                <h:form id="listar-pedidos" prependId="false">
                     <section class="content">
 
                         <div class="box">
@@ -40,6 +40,7 @@ and open the template in the editor.
                                 <table id="example1" class="table table-bordered table-striped">
                                     <thead>
                                         <tr>
+                                            <th>#</th>
                                             <th>Ambiente</th>
                                             <th>Mesa</th>
                                             <th>Cliente</th>  
