--- a/web/app/administrador/correos/registrar.xhtml
+++ b/web/app/administrador/correos/registrar.xhtml
@@ -9,7 +9,8 @@ and open the template in the editor.
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:jsf="http://xmlns.jcp.org/jsf">
+      xmlns:jsf="http://xmlns.jcp.org/jsf"
+      xmlns:b="http://bootsfaces.net/ui">
 
     <ui:composition template="/WEB-INF/template/template.xhtml">
         <ui:define name="contenido">
@@ -34,6 +35,7 @@ and open the template in the editor.
                             </div>
                             <!-- /.box-header -->
                             <!-- form start -->
+<!--                            <b:message for="form-registro" showSummary="true" show-detail="true"/>-->
                             <h:form class="form-horizontal">
                                 <div class="box-body">
 
@@ -89,7 +91,7 @@ and open the template in the editor.
                                         <label for="mensaje" class="col-sm-2 control-label">Mensaje</label>
 
                                         <div class="col-sm-10">
-                                            <input type="text"  class="form-control" id="mensaje" placeholder="Mensaje" jsf:value="#{controllerEmail.mensaje}"/>
+                                            <textarea type="text"  class="form-control" id="mensaje" placeholder="Mensaje" jsf:value="#{controllerEmail.mensaje}"/>
                                         </div>
                                     </div>
 
