--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -290,7 +290,8 @@ and open the template in the editor.
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <h:form  id="contactForm" >
+                    <h:messages showSummary="true" globalOnly="true"/>
+                    <h:form  id="contactForm" prependId="false">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -308,6 +309,10 @@ and open the template in the editor.
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
+                                    <input type="tel" class="form-control" placeholder="#{msjIndex.Asunto}" id="phone" required="" data-validation-required-message="Ingrese Telefono" jsf:value="#{controllerEmail.telefono}"/>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
                                     <textarea class="form-control" placeholder="#{msjIndex.MotivoDeContacto}" id="message" required="" data-validation-required-message="Ingrese Mensaje" jsf:value="#{controllerEmail.mensaje}"></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
@@ -315,7 +320,7 @@ and open the template in the editor.
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <h:commandButton type="submit" class="btn btn-xl" value="#{msjIndex.Enviar}" action="#{controllerEmail.enviarMensaje()}" />
+                                <h:commandButton type="submit" class="btn btn-xl" value="#{msjIndex.Enviar}" actionListener="#{controllerEmail.enviarMensaje()}" />
                             </div>
                         </div>
                     </h:form>
