--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -290,37 +290,45 @@ and open the template in the editor.
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <h:messages showSummary="true" globalOnly="true"/>
-                    <h:form  id="contactForm" prependId="false">
+                    
+                    <h:form prependId="false">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="#{msjIndex.NombreYApellido}" id="name" required="" data-validation-required-message="Ingrese Nombre y Apellido." jsf:value="#{controllerEmail.nombresyAp}"/>
+                                    <input type="text" class="form-control" placeholder="#{msjIndex.NombreYApellido}" required="" data-validation-required-message="Ingrese Nombre y Apellido." jsf:value="#{controllerEmail.nombresyAp}"/>
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="#{msjIndex.CorreoElectronico}" id="email" required="" data-validation-required-message="Ingrese Correo" jsf:value="#{controllerEmail.correoRemi}"/>
+                                    <input type="email" class="form-control" placeholder="#{msjIndex.CorreoElectronico}" required="" data-validation-required-message="Ingrese Correo" jsf:value="#{controllerEmail.correoRemi}"/>
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="#{msjIndex.Telefono}" id="phone" required="" data-validation-required-message="Ingrese Telefono" jsf:value="#{controllerEmail.telefono}"/>
+                                    <input type="password" class="form-control" placeholder="#{msjIndex.Clave}" required="" data-validation-required-message="Ingrese Clave" jsf:value="#{controllerEmail.claveRemi}"/>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="tel" class="form-control" placeholder="#{msjIndex.Telefono}"  required="" data-validation-required-message="Ingrese Telefono" jsf:value="#{controllerEmail.telefono}"/>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" placeholder="#{msjIndex.CorreoElectronico}" required="" data-validation-required-message="Ingrese Correo Destino" jsf:value="#{controllerEmail.email}"/>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="#{msjIndex.Asunto}" id="phone" required="" data-validation-required-message="Ingrese Telefono" jsf:value="#{controllerEmail.telefono}"/>
+                                    <input type="tel" class="form-control" placeholder="#{msjIndex.Asunto}" required="" data-validation-required-message="Ingrese Telefono" jsf:value="#{controllerEmail.asunto}"/>
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="#{msjIndex.MotivoDeContacto}" id="message" required="" data-validation-required-message="Ingrese Mensaje" jsf:value="#{controllerEmail.mensaje}"></textarea>
+                                    <textarea class="form-control" placeholder="#{msjIndex.MotivoDeContacto}" required="" data-validation-required-message="Ingrese Mensaje" jsf:value="#{controllerEmail.mensaje}"></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <h:commandButton type="submit" class="btn btn-xl" value="#{msjIndex.Enviar}" actionListener="#{controllerEmail.enviarMensaje()}" />
+                                <h:commandButton type="submit" class="btn btn-xl" value="#{msjIndex.Enviar}" action="#{controllerEmail.enviarMensaje()}" />
                             </div>
                         </div>
                     </h:form>
